# eps_-Onboarding_SecOps

./: .gitignore  README.md  RELATORIO.md  main.py  pyproject.toml
.github/workflows/: devsecops.yml
