[tool.poetry]
name = "eps-onboarding-secops"
version = "0.1.0"
description = "Projeto de Onboarding SecOps - EPS FGA0316 2026.1"
authors = ["Beatriz Vieira Nascimento <beatriz@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
bandit = {version = "^1.8", extras = ["toml"]}
ruff = "^0.11"
safety = "^3.5"

[tool.bandit]
exclude_dirs = [".venv", "tests"]
skips = []

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = []

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
